Quick-access to `/` and `~` doesn’t work anymore
Steps to reproduce
- Type in
/
or~
.
Reproducible in:
- Can’t test master, because I currently just have very limited data rate and volume.
- Fedora 29 Silverblue
- Nautilus v3.30.1-stable
Current behavior
Search bar opens.
Expected behavior
Location bar opens.
Additional information
Was working for years or decades, up to a few days or at least weeks ago.