window: Revert to chaining up first

Commit dae54e0c72e92a3129c4e8754bd9f3025e487c72 made the slot handle
the key press event before chaining up.

But this breaks the [~] and [/] accelerators, possibly because the slot
handles them as type-to-search, stopping the event without chaining up.

To fix this regression, revert to chaining up first. Pressing [Down] on
search entry to focus the view won't work like this, but we are fixing
that in the next commit.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/issues/684